--- a/youthtransition/pages/ya-housing.html
+++ b/youthtransition/pages/ya-housing.html
@@ -562,18 +562,20 @@
 
                             <hr/>
 
-                            <a class="btn btn-outline-primary float-left" href="./ya-demographics.html">
+                            <a class="btn btn-outline-primaya-demographics.htmlry float-left"
+                               href="./ya-socialinterests.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
-                                Previous: Demographics
+                                Previous: Social Interests
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
                             <button type="submit" class="btn btn-outline-primary float-right" >
                                 Previous: Demographics
                             </button>
                             -->
-                            <a class="btn btn-outline-primary float-right" href="./ya-education.html">
+                            <a class="btn btn-outline-primary float-right"
+                               href="./ya-placementandsafety.html">
                                 <!--<i class="fa fa-home fa-fw" style="font-size: 20px;"></i>-->
-                                Next: Education
+                                Next: Placement & Safety
                             </a>
                             <!-- ***Note: the above link is just for html demo below is for submission to Angular
                             <button type="submit" class="btn btn-outline-primary float-right" >
