--- a/youthtransition/pages/ya-youthsintransition.html
+++ b/youthtransition/pages/ya-youthsintransition.html
@@ -3,34 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Youths in Transition</title>
+    <title>Youths in Transition V13.1</title>
 
+    <!-- Begin Head insert -->
     <!-- Bootstrap Core -->
-
-    <!--<link href="../css/bootstrap.min.css" rel="stylesheet">-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-
-    <!-- Custom CSS -->
-    <!--<link href="../css/yaappraisal.css" rel="stylesheet">-->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">
-
-    <!-- Icons -->
-    <link href="../vendor/open-iconic-master/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet"
+          href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <link href="../node_modules/jquery-ui/jquery-ui.css"
+          rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../node_modules/font-awesome/css/font-awesome.min.css"
+          rel="stylesheet" type="text/css">
+
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="../css/style.css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via  -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-
-    <![endif]-->
+    <!-- End Head insert -->
 
 </head>
 <body>
@@ -294,22 +283,32 @@
     </div> <!-- row -->
 </div> <!-- container-fluid -->
 
-<!-- jQuery -->
-<!--<script src="../vendor/jquery/jquery.min.js"></script>-->
-
+<!-- Begin body insert -->
 <!-- Bootstrap Core JavaScript -->
-<!--    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
-<!--<script src="../js/bootstrap.min.js"></script>-->
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+<script src="../node_modules/jquery/dist/jquery.min.js"></script>
+<script src="../node_modules/jquery-ui/jquery-ui.js"></script>
+<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <script>
     $( function() {
         $( ".datepicker" ).datepicker({ minDate: -20, maxDate: "+1M +10D" });
     } );
 </script>
+
+<!-- Include Current Navigation -->
+<script>
+    $(function() {
+        $("#navsidebarNav").load("./ya-base-nav-current.html");
+    });
+</script>
+
+<!-- Include Youth Header -->
+<script>
+    $(function() {
+        $("#youthHeaderViewOnly").load("./ya-base-youth-header-viewonly.html");
+    });
+</script>
+<!-- End body insert -->
 
 </body>
 </html>
